# wasm-in-wasm-experiment

./: .gitignore  LICENSE  Makefile  ReadMe.md
alpha/: Cargo.toml
alpha/src/: lib.rs
artifact-registry/: Cargo.toml  Makefile
artifact-registry/src/: main.rs
beta/: Cargo.toml  Makefile
beta/src/: lib.rs
runtime/: Cargo.toml  Makefile
runtime/resources/: app-package.json  index.js  remove.txt
runtime/src/: fetch.rs  lib.rs  utils.rs
scripts/: glue.sh
