[package]
name = "artifact-registry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.10.0", features = ["full"] }
tokio-util = "0.6.7"
wasmer = "2.0.0"
