[package]
name = 'beta'
version = '0.1.0'
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = { version = "0.4.5" }  # wasm memory allocator, optimises size
wasm-bindgen = "0.2.75"


[lib]
crate-type = ['cdylib', 'rlib']  # compile for wasm target

[profile.release]
opt-level = 's'  # optimise for small code size
